--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,12 @@
-[functions]
-    directory = "functions/"
+[build]
+  functions = "functions"
 
 [[redirects]]
-    from = "/api/*"
-    to = "/.netlify/functions/:splat"
-    status = 200
+  from = "/api"
+  to = "/.netlify/functions/index"
+  status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/index"
+  status = 200
